Changed z-index of navbar, fix for mobile devices (blocking buttons)

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ header {
       header .container .burger-menu {
         opacity: 1; }
       header .container .navbar nav {
-        z-index: 10;
+        z-index: 0;
         width: 100%;
         position: absolute;
         top: 100px;
@@ -166,6 +166,7 @@ header {
           header .container .navbar nav .search img {
             margin: 0; }
         header .container .navbar nav.expanded {
+          z-index: 4;
           opacity: 1;
           border-color: #2c3e50; } }
 
